Added styles to center and style images and change link color

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -14,3 +14,12 @@ $loadingImage: "{{- $img.Permalink | relURL }}"
  
 @import "bulma/bulma"
 @import "fresh/core"
+
+a
+  color: #30BA78;
+
+.blog img
+  display: block
+  margin: 0 auto
+  max-width: 640px
+  border-radius: 8px
