Additional styles to format code block color scheme

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -23,3 +23,26 @@ a
   margin: 0 auto
   width: 640px
   border-radius: 8px
+
+pre
+  background-color: transparent
+code
+  border-radius: 8px
+
+.content table td, .content table th
+  border: none
+
+.content pre code table td:first-child
+  border-right: none !important
+
+.hljs
+  background: #1F2937 !important
+
+.hljs-keyword, .hljs-selector-tag, .hljs-name, .hljs-attr
+  color: #279af9 !important
+
+.hljs-string, .hljs-type, .hljs-built_in, .hljs-builtin-name, .hljs-selector-id, .hljs-selector-attr, .hljs-selector-pseudo, .hljs-addition, .hljs-variable, .hljs-template-variable
+  color: #30BA78 !important
+
+.hljs-comment, .hljs-deletion, .hljs-meta
+  color: #6970c6 !important
