rename releases to blog, remove taxonomies to fix template lookup

--- a/themes/hugo-refresh/layouts/blog/single.html
+++ b/themes/hugo-refresh/layouts/blog/single.html
@@ -2,7 +2,7 @@
 
     {{- partial "navbar.html" . -}}
     {{- partial "navbar-clone.html" . -}}
-    {{- partial "releases/content.html" . -}}
+    {{- partial "blog/content.html" . -}}
     
     {{- partial "footer.html" . -}}
 
