--- a/themes/hugo-refresh/layouts/index.html
+++ b/themes/hugo-refresh/layouts/index.html
@@ -1,44 +1,14 @@
 {{- define "main" -}}
 
-    <section class="hero is-fullheight is-default is-bold">
+    {{- partial "navbar.html" . -}}
+    {{- partial "navbar-clone.html" . -}}
 
-        {{- partial "navbar.html" . -}}
-        {{- partial "navbar-clone.html" . -}}
+    {{- partial "hero.html" . -}}
 
-        {{- $homepage   := .Site.Params.homepage -}}
-        {{- $title      := index $homepage "title" -}}
-        {{- $subtitle   := index $homepage "subtitle" -}}
-        {{- $image      := index $homepage "image" -}}
-        <div class="hero-body">
-        <div class="container">
-            <div class="columns is-vcentered">
-                <div class="column is-5 is-offset-1">
-                    <figure class="image">
-                        {{- $img := resources.Get $image -}}
-                        <img src="{{- $img.Permalink | relURL -}}"
-                             style="width:{{- .Site.Params.homepage.imageWidth -}}" alt="Myself">
-                    </figure>
-                </div>
-                <div class="column is-5 is-offset-1 landing-caption">
-                    <h1 class="title is-1 is-bold is-spaced">
-                    {{- $title -}}
-                    </h1>
-                    {{- with $subtitle -}}
-                    <h2 class="subtitle is-3 is-muted">
-                    {{ . }}
-                    </h2>
-                    {{- end -}}
-                    {{/*  <p>
-                    <a class="button cta rounded primary-btn raised" href="{{- $buttonLink -}}">
-                        {{- $buttonText -}}
-                    </a>
-                    </p>  */}}
-                </div>
-            </div>
-        </div>
-        </div>
-    </section>
-
+    <div class="container">
+    {{ .Content }}
+    </div>
+    
     {{- partial "footer.html" . -}}
 
     <!-- Back To Top Button -->
