Added section content using partial feature file

--- a/themes/hugo-refresh/layouts/index.html
+++ b/themes/hugo-refresh/layouts/index.html
@@ -6,6 +6,7 @@
     {{- partial "hero.html" . -}}
 
     <div class="container">
+    {{- partial "single/feature.html" . -}}
     {{ .Content }}
     </div>
     
