--- a/themes/hugo-refresh/layouts/index.html
+++ b/themes/hugo-refresh/layouts/index.html
@@ -5,8 +5,9 @@
 
     {{- partial "hero.html" . -}}
 
-    <div class="container">
+    <div class="container has-text-centered">
     {{- partial "single/feature.html" . -}}
+    {{- partial "single/subfeature.html" . -}}
     {{ .Content }}
     </div>
     
