--- a/themes/hugo-refresh/layouts/partials/single/subfeature.html
+++ b/themes/hugo-refresh/layouts/partials/single/subfeature.html
@@ -4,7 +4,15 @@
 
     {{ range $block := .Params.subfeatContent }}
     <div class="">
-        {{ $block.image }}
+        {{ with $image := $.Page.Resources.Get $block.image }}
+        {{ $imageScale := 1 }}
+
+        {{ if hasSuffix $image "@2x.png" }}
+            {{ $imageScale = 2 }}
+        {{ end }}
+
+        <img src="{{ $image.Permalink | relURL }}" width="{{ div $image.Width $imageScale}}" />
+        {{ end }}
         <h3>{{ $block.title }}</h3>
         <p>{{ $block.caption }}</p>
     </div>
