--- a/themes/hugo-refresh/assets/fresh/partials/_utils.scss
+++ b/themes/hugo-refresh/assets/fresh/partials/_utils.scss
@@ -117,6 +117,10 @@ body #backtotop a {
     color: $white !important;
 }
 
+.mb-10 {
+    margin-bottom: 10px;
+}
+
 .mb-20 {
     margin-bottom: 20px;
 }
@@ -131,6 +135,10 @@ body #backtotop a {
 
 .mt-20 {
     margin-top: 20px;
+}
+
+.mt-10 {
+    margin-top: 10px;
 }
 
 .mt-40 {
