--- a/themes/hugo-refresh/layouts/partials/single/subfeature.html
+++ b/themes/hugo-refresh/layouts/partials/single/subfeature.html
@@ -1,6 +1,6 @@
 <div class="columns is-centered container">
     <div class="column is-three-fifths">
-    <h2>{{ .Params.subfeatTitle }}</h2>
+    <h2 class="title is-3">{{ .Params.subfeatTitle }}</h2>
 
     {{ range $block := .Params.subfeatContent }}
     <div class="columns">
@@ -16,7 +16,7 @@
         </div>
         {{ end }}
         <div class="column">
-            <h3>{{ $block.title }}</h3>
+            <h3 class="title is-5">{{ $block.title }}</h3>
             <p>{{ $block.caption }}</p>
         </div>
     </div>
