--- a/themes/hugo-refresh/layouts/partials/single/feature.html
+++ b/themes/hugo-refresh/layouts/partials/single/feature.html
@@ -1,23 +1,25 @@
-<div class="columns is-centered mb-60">
-    <div class="column is-11">
-        <h2 class="title is-3">{{ .Params.featuredTitle }}</h2>
+<div class="feature">
+    <div class="columns is-centered">
+        <div class="column is-11 mb-60">
+            <h2 class="title is-3">{{ .Params.featuredTitle }}</h2>
 
-        <div class="columns is-centered is-variable is-5">
-            {{ range $block := .Params.featuredContent }}
-            <div class="column is-one-third">
-                {{ with $image := $.Page.Resources.Get $block.image }}
-                {{ $imageScale := 1 }}
+            <div class="columns is-centered is-variable is-5">
+                {{ range $block := .Params.featuredContent }}
+                <div class="column is-one-third">
+                    {{ with $image := $.Page.Resources.Get $block.image }}
+                    {{ $imageScale := 1 }}
 
-                {{ if hasSuffix $image "@2x.png" }}
-                    {{ $imageScale = 2 }}
+                    {{ if hasSuffix $image "@2x.png" }}
+                        {{ $imageScale = 2 }}
+                    {{ end }}
+
+                    <img src="{{ $image.Permalink | relURL }}" width="{{ div $image.Width $imageScale}}" />
+                    {{ end }}
+                    <div class="mb-10"><h3 class="title is-5 mt-10">{{ $block.title }}</h3></div>
+                    <p>{{ $block.caption }}</p>
+                </div>
                 {{ end }}
-
-                <img src="{{ $image.Permalink | relURL }}" width="{{ div $image.Width $imageScale}}" />
-                {{ end }}
-                <div class="mb-10"><h3 class="title is-5 mt-10">{{ $block.title }}</h3></div>
-                <p>{{ $block.caption }}</p>
             </div>
-            {{ end }}
         </div>
     </div>
 </div>
