Added wrapper div for section and classes for background and layout

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -46,3 +46,7 @@ code
 
 .hljs-comment, .hljs-deletion, .hljs-meta
   color: #6970c6 !important
+
+.bg-fill-rounded
+  background-color: #EFFBF6
+  border-radius: 10px
