--- a/themes/hugo-refresh/assets/fresh/partials/_utils.scss
+++ b/themes/hugo-refresh/assets/fresh/partials/_utils.scss
@@ -169,6 +169,33 @@ body #backtotop a {
     padding-bottom: 40px !important;
 }
 
+.pt-10 {
+    padding-top: 10px;
+}
+
+.pt-20 {
+    padding-top: 20px;
+}
+
+.pt-40 {
+    padding-top: 40px;
+}
+
+.px-10 {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.px-20 {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.px-40 {
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
 //Input placeholders
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: $placeholder;
