--- a/themes/hugo-refresh/layouts/index.html
+++ b/themes/hugo-refresh/layouts/index.html
@@ -4,16 +4,18 @@
     {{- partial "navbar-clone.html" . -}}
 
     {{- partial "hero.html" . -}}
-
+    
+    {{- partial "single/feature.html" . -}}
+    {{- partial "single/subfeature.html" . -}}
+    <section class="homepage-content">
     <div class="container has-text-centered">
-        {{- partial "single/feature.html" . -}}
-        {{- partial "single/subfeature.html" . -}}
         <div class="columns is-centered">
             <div class="column is-two-thirds">
             {{ .Content }}
             </div>
         </div>
     </div>
+    </section>
     
     {{- partial "footer.html" . -}}
 
