--- a/themes/hugo-refresh/layouts/partials/single/feature.html
+++ b/themes/hugo-refresh/layouts/partials/single/feature.html
@@ -1,4 +1,5 @@
-<div class="feature">
+<section class="feature">
+    <div class="container has-text-centered">
     <div class="columns is-centered">
         <div class="column is-11 mb-60">
             <h2 class="title is-3">{{ .Params.featuredTitle }}</h2>
@@ -22,4 +23,5 @@
             </div>
         </div>
     </div>
-</div>
+    </div>
+</section>
