--- a/themes/hugo-refresh/layouts/partials/single/subfeature.html
+++ b/themes/hugo-refresh/layouts/partials/single/subfeature.html
@@ -1,4 +1,5 @@
-<div class="sub-feature">
+<section class="sub-feature">
+    <div class="container has-text-centered">
     <div class="columns is-centered">
         <div class="column is-three-fifths bg-fill-rounded mb-40">
         <h2 class="title is-3 pt-40">{{ .Params.subfeatTitle }}</h2>
@@ -26,4 +27,5 @@
         {{ end }}
         </div>
     </div>
-</div>
+    </div>
+</section>
