Added margin to the top of the homepage h2 elements

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -47,6 +47,13 @@ code
 .hljs-comment, .hljs-deletion, .hljs-meta
   color: #6970c6 !important
 
+.homepage-content h2
+  font-size: 2rem
+  font-weight: 600
+  line-height: 1.125
+  margin-bottom: 1.5rem
+  margin-top: 60px
+
 .bg-fill-rounded
   background-color: #EFFBF6
   border-radius: 10px
