Added padding fixes for mobile layout improvements

--- a/themes/hugo-refresh/layouts/index.html
+++ b/themes/hugo-refresh/layouts/index.html
@@ -8,7 +8,7 @@
     {{- partial "single/feature.html" . -}}
     {{- partial "single/subfeature.html" . -}}
     <section class="homepage-content">
-    <div class="container has-text-centered">
+    <div class="container has-text-centered px-40 mb-60">
         <div class="columns is-centered">
             <div class="column is-two-thirds">
             {{ .Content }}
