--- a/themes/hugo-refresh/layouts/partials/single/feature.html
+++ b/themes/hugo-refresh/layouts/partials/single/feature.html
@@ -1,7 +1,7 @@
 <section class="feature">
     <div class="container has-text-centered">
     <div class="columns is-centered">
-        <div class="column is-11 mb-60">
+        <div class="column is-11 px-40 mb-60">
             <h2 class="title is-3">{{ .Params.featuredTitle }}</h2>
 
             <div class="columns is-centered is-variable is-5">
