--- a/themes/hugo-refresh/layouts/partials/single/subfeature.html
+++ b/themes/hugo-refresh/layouts/partials/single/subfeature.html
@@ -1,11 +1,11 @@
 <section class="sub-feature">
     <div class="container has-text-centered">
     <div class="columns is-centered">
-        <div class="column is-three-fifths bg-fill-rounded mb-40">
+        <div class="column is-three-quarters bg-fill-rounded px-40 mb-40">
         <h2 class="title is-3 pt-40">{{ .Params.subfeatTitle }}</h2>
 
         {{ range $block := .Params.subfeatContent }}
-        <div class="sub-feature-item mb-40 px-40">
+        <div class="sub-feature-item mb-40">
             <div class="columns is-vcentered">
                 {{ with $image := $.Page.Resources.Get $block.image }}
                 {{ $imageScale := 1 }}
