--- a/themes/hugo-refresh/layouts/partials/single/subfeature.html
+++ b/themes/hugo-refresh/layouts/partials/single/subfeature.html
@@ -1,7 +1,7 @@
 <section class="sub-feature">
     <div class="container has-text-centered">
     <div class="columns is-centered">
-        <div class="column is-three-quarters bg-fill-rounded px-40 mb-40">
+        <div class="column is-three-fifths-desktop is-three-quarters-tablet bg-fill-rounded px-40 mb-40">
         <h2 class="title is-3 pt-40">{{ .Params.subfeatTitle }}</h2>
 
         {{ range $block := .Params.subfeatContent }}
