Added new Hero image reworked structure and styling for placement

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -74,3 +74,22 @@ h1, h2, h3, h4, h5, h6, p, strong
   h5,
   h6
     color: #175A3A
+
+.hero-body
+  padding: 0
+
+.hero-body, .hero.is-fullheight .hero-body
+  background-color: #98CFB8
+  align-items: end
+
+.hero-body figure > img
+  display: block
+  margin: 0 auto
+
+@media (max-width: 767px)
+  .landing-caption
+    margin-bottom: 20%
+
+@media (min-width: 768px)
+  .landing-caption
+    margin-bottom: 10%
