Added background gradient and shadow within Hero section

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -80,11 +80,13 @@ h1, h2, h3, h4, h5, h6, p, strong
 
 .hero-body, .hero.is-fullheight .hero-body
   background-color: #98CFB8
+  background: linear-gradient(180deg, rgba(152,207,184,0.1) 0%, rgba(104,198,159,1) 100%);
   align-items: end
 
 .hero-body figure > img
   display: block
   margin: 0 auto
+  box-shadow: 0px -4px 24px -20px black
 
 @media (max-width: 767px)
   .landing-caption
