--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -88,6 +88,9 @@ h1, h2, h3, h4, h5, h6, p, strong
   margin: 0 auto
   box-shadow: 0px -4px 24px -20px black
 
+.footer.footer-dark h3
+  color: #fff;
+
 @media (max-width: 767px)
   .landing-caption
     margin-bottom: 20%
