Changed styling of primary button colours and font weight

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -20,6 +20,12 @@ a
   &:hover
     color: #7DE2BC
 
+.button.is-primary
+  font-weight: bold
+  background-color: #30BA78
+  &:hover
+    background-color: #7DE2BC
+
 .blog img
   display: block
   margin: 0 auto
