Changed navbar styling to be positioned above hero section

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -55,6 +55,12 @@ code
 .hljs-comment, .hljs-deletion, .hljs-meta
   color: #6970c6 !important
 
+.navbar.is-fresh
+  position: absolute
+  left: 0
+  right: 0
+  background-color: transparent
+
 .homepage-content h2
   font-size: 2rem
   font-weight: 600
