make hero work better on higher viewports

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -87,8 +87,8 @@ h1, h2, h3, h4, h5, h6, p, strong
   h6
     color: #175A3A
 
-.hero-body
-  padding: 0
+.hero.is-large .hero-body
+  padding-bottom: 0
 
 .hero-body, .hero.is-fullheight .hero-body
   background-color: #98CFB8
