--- a/themes/hugo-refresh/layouts/partials/hero.html
+++ b/themes/hugo-refresh/layouts/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero is-fullheight is-default is-bold">
+<section class="hero is-large is-default is-bold">
     {{- $homepage   := .Site.Params.homepage -}}
     {{- $title      := index $homepage "title" -}}
     {{- $subtitle   := index $homepage "subtitle" -}}
