--- a/themes/hugo-refresh/layouts/partials/footer.html
+++ b/themes/hugo-refresh/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer footer-dark">
   <div class="container">
-    <div class="columns">
+    <div class="columns is-variable is-6">
       <div class="column">
         <!-- <div class="footer-logo"> -->
             {{- $out_fo  := "footer.svg" -}}
