Adds ability to specify a body font for the theme

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -1,6 +1,7 @@
 $fontMainPage: "{{ .Site.Params.mainPage.fontFamily }}" 
 $fontSidebar:  "{{ .Site.Params.sidebar.fontFamily }}"
 $fontNavbar:   "{{ .Site.Params.navbar.fontFamily }}"
+$fontBody:     "{{ .Site.Params.mainPage.bodyFontFamily }}" 
 $mainColour:   {{ .Site.Params.mainColour }}
 
 {{ $out_fo  := "loader.svg" }}
