Changes titles to use main theme font variable

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -16,6 +16,9 @@ $loadingImage: "{{- $img.Permalink | relURL }}"
 @import "bulma/bulma"
 @import "fresh/core"
 
+h1, h2, h3, h4, h5, h6
+  font-family: $fontMainPage
+
 a
   color: #30BA78
   &:hover
