--- a/themes/hugo-refresh/layouts/partials/hero.html
+++ b/themes/hugo-refresh/layouts/partials/hero.html
@@ -6,15 +6,15 @@
     <div class="hero-body">
     <div class="container has-text-centered px-20">
         <div class="columns is-centered">
-            <div class="column is-9">
+            <div class="column is-10">
                 <div class="landing-caption">
                     <h1 class="title is-2 is-bold is-spaced">
                     {{- $title -}}
                     </h1>
                     {{- with $subtitle -}}
-                    <h2 class="subtitle is-4">
+                    <p class="content is-medium xp-2">
                     {{ . }}
-                    </h2>
+                    </p>
                     {{- end -}}
                     {{/*  <p>
                     <a class="button cta rounded primary-btn raised" href="{{- $buttonLink -}}">
