Creates alternating image positions for Sub Feature section

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -103,6 +103,9 @@ h1, h2, h3, h4, h5, h6, p, strong
 .footer.footer-dark h3
   color: #fff;
 
+.is-row-reversed
+  flex-direction: row-reverse
+
 @media (max-width: 767px)
   .landing-caption
     margin-bottom: 20%
