add copy to the How It Works section

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -113,3 +113,7 @@ h1, h2, h3, h4, h5, h6, p, strong
 @media (min-width: 768px)
   .landing-caption
     margin-bottom: 10%
+
+#how-it-works ~ p
+  text-align: left
+  margin-bottom: .5rem
