--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -114,6 +114,5 @@ h1, h2, h3, h4, h5, h6, p, strong
   .landing-caption
     margin-bottom: 10%
 
-#how-it-works ~ p
-  text-align: left
-  margin-bottom: .5rem
+.homepage-content p
+  margin-bottom: 0.5rem
