--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -115,4 +115,5 @@ h1, h2, h3, h4, h5, h6, p, strong
     margin-bottom: 10%
 
 .homepage-content p
-  margin-bottom: 0.5rem
+  margin-bottom: 1rem
+  padding: 0 6rem
