--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -110,6 +110,9 @@ h1, h2, h3, h4, h5, h6, p, strong
 .is-row-reversed
   flex-direction: row-reverse
 
+.homepage-content p
+  margin-bottom: 1rem
+
 @media (max-width: 767px)
   .landing-caption
     margin-bottom: 20%
@@ -118,6 +121,6 @@ h1, h2, h3, h4, h5, h6, p, strong
   .landing-caption
     margin-bottom: 10%
 
-.homepage-content p
-  margin-bottom: 1rem
-  padding: 0 6rem
+@media (min-width: 640px)
+  .homepage-content p
+    padding: 0 5rem
