--- a/themes/hugo-refresh/layouts/partials/navbar.html
+++ b/themes/hugo-refresh/layouts/partials/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar is-fresh is-transparent no-shadow" role="navigation" aria-label="main navigation">
+<nav class="navbar is-fresh {{ if .IsHome }}is-transparent{{ end }} no-shadow" role="navigation" aria-label="main navigation">
   <div class="container">
     <div class="navbar-brand">
 
@@ -66,7 +66,8 @@
             {{- $shmenu = .Params.showinmenu -}}
           {{- end -}}
           {{- if $shmenu -}}
-            {{- $secCount := len .Sections -}}
+            {{- $secShowMenu := where .Sections ".Params.showinmenu" "eq" true -}}
+            {{- $secCount := len $secShowMenu -}}
             {{- if (ne $secCount 0) }}
             <div class="navbar-item has-dropdown is-hoverable">
               <a href="{{- .Permalink | relURL -}}" class="navbar-link">
