Fixes to Documentation Navbar styles

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -141,6 +141,11 @@ h1, h2, h3, h4, h5, h6, p, strong
   .is-hidden-touch
     display: none !important;
 
+  .mainview .navbar
+    top: 4rem
+    display: flex
+    align-items: center
+
   .main-panel
     top: 6rem;
 
