--- a/themes/hugo-refresh/layouts/partials/docs/mainview.html
+++ b/themes/hugo-refresh/layouts/partials/docs/mainview.html
@@ -1,5 +1,5 @@
 <div class="mainview">
-    <div class="navbar is-light is-hidden-desktop" style="top: 4rem; display: flex; align-items: center;">
+    <div class="navbar is-light is-hidden-desktop">
         <div class="navbar-item">
             <a class="navbar-docs" @click="drawer = !drawer">Docs</a>
         </div>
