--- a/themes/hugo-refresh/layouts/partials/docs/mainview.html
+++ b/themes/hugo-refresh/layouts/partials/docs/mainview.html
@@ -5,11 +5,11 @@
         </div>
     </div>
 
-    <div class="sidebar-panel is-hidden-touch" style="position: fixed; top: 0; overflow:auto; padding-top: 4rem; background-color:#f3f3f3; bottom:0;">
+    <div class="sidebar-panel is-hidden-touch">
         {{- partial "docs/sidenav.html" . -}}
     </div>
 
-    <div class="main-panel" style="overflow-y: auto; position: absolute;">
+    <div class="main-panel">
         {{- partial "docs/content.html" . -}}
         {{- partial "footer.html" . -}}
     </div>
