Fixes to styles

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -117,6 +117,17 @@ h1, h2, h3, h4, h5, h6, p, strong
 .nav-section+.nav-section
   margin-top: 1rem;
 
+.main-panel
+  position: absolute
+
+.sidebar-panel
+  position: fixed
+  top: 0
+  bottom: 0
+  padding-top: 4rem
+  background-color: #f3f3f3
+  overflow: auto
+
 @media (max-width: 767px)
   .landing-caption
     margin-bottom: 20%
@@ -147,16 +158,9 @@ h1, h2, h3, h4, h5, h6, p, strong
     align-items: center
 
   .main-panel
-    position: absolute
     top: 6rem
     overflow-y: auto
 
   .sidebar-panel
-    position: fixed
-    padding-top: 4rem
-    top: 0
     width: 100%
     z-index: 5000
-    overflow: auto
-    background-color: #f3f3f3
-    bottom: 0
