Moved styles for mobile menu Close button

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -127,6 +127,12 @@ h1, h2, h3, h4, h5, h6, p, strong
   padding-top: 4rem
   background-color: #f3f3f3
   overflow: auto
+  & .menu
+    padding: 1.5rem
+    & .navbar-docs-close
+      position: absolute
+      top: 1.5rem
+      left: 1.5rem
 
 @media (max-width: 767px)
   .landing-caption
