--- a/themes/hugo-refresh/layouts/partials/docs/sidenav.html
+++ b/themes/hugo-refresh/layouts/partials/docs/sidenav.html
@@ -1,10 +1,8 @@
 {{ $sections    := where site.Sections "Section" "docs" }}
 
-<aside class="menu" style="padding: 1.5rem;">
-    <div class="is-hidden-desktop" style="position:absolute; top: 1.5rem; left:1.5rem;">
-        <a class="navbar-docs-close">
-            Close
-        </a>
+<aside class="menu">
+    <div class="navbar-docs-close is-hidden-desktop">
+        <a>Close</a>
     </div>
     
     {{range $sections}}
