Minor sass semicolon removals

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -97,7 +97,7 @@ h1, h2, h3, h4, h5, h6, p, strong
 
 .hero-body, .hero.is-fullheight .hero-body
   background-color: #98CFB8
-  background: linear-gradient(180deg, rgba(152,207,184,0.1) 0%, rgba(104,198,159,1) 100%);
+  background: linear-gradient(180deg, rgba(152,207,184,0.1) 0%, rgba(104,198,159,1) 100%)
   align-items: end
 
 .hero-body figure > img
@@ -106,7 +106,7 @@ h1, h2, h3, h4, h5, h6, p, strong
   box-shadow: 0px -4px 24px -20px black
 
 .footer.footer-dark h3
-  color: #fff;
+  color: #fff
 
 .is-row-reversed
   flex-direction: row-reverse
@@ -115,7 +115,7 @@ h1, h2, h3, h4, h5, h6, p, strong
   margin-bottom: 1rem
 
 .nav-section+.nav-section
-  margin-top: 1rem;
+  margin-top: 1rem
 
 .main-panel
   position: absolute
@@ -156,7 +156,7 @@ h1, h2, h3, h4, h5, h6, p, strong
 
 @media screen and (max-width: 1023px)
   .is-hidden-touch
-    display: none !important;
+    display: none !important
 
   .mainview .navbar
     top: 4rem
