Removed unused @click for Docs button

--- a/themes/hugo-refresh/layouts/partials/docs/mainview.html
+++ b/themes/hugo-refresh/layouts/partials/docs/mainview.html
@@ -1,7 +1,7 @@
 <div class="mainview">
     <div class="navbar is-light is-hidden-desktop">
         <div class="navbar-item">
-            <a class="navbar-docs" @click="drawer = !drawer">Docs</a>
+            <a class="navbar-docs">Docs</a>
         </div>
     </div>
 
