--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -117,6 +117,10 @@ h1, h2, h3, h4, h5, h6, p, strong
 .nav-section+.nav-section
   margin-top: 1rem
 
+.mainview .navbar, nav .navbar
+  display: flex
+  align-items: center
+
 .main-panel
   position: absolute
 
@@ -160,8 +164,6 @@ h1, h2, h3, h4, h5, h6, p, strong
 
   .mainview .navbar
     top: 4rem
-    display: flex
-    align-items: center
 
   .main-panel
     top: 6rem
