Adds Docs navbar to sticky navbar clone

--- a/themes/hugo-refresh/layouts/partials/navbar-clone.html
+++ b/themes/hugo-refresh/layouts/partials/navbar-clone.html
@@ -26,7 +26,14 @@
           </div>
         </a>
       </div>
-  
+      
+      {{- if (eq .Section "docs") -}}
+      <div class="navbar is-light is-hidden-desktop">
+        <div class="navbar-item">
+            <a class="navbar-docs">Docs</a>
+        </div>
+      </div>
+      {{- end -}}
       
       {{- $showIcons := false -}}
       {{- if .Site.Params.navbar.showIcons -}}
