Hides Doc section for mobile nav if post has showInMenu set as false

--- a/themes/hugo-refresh/layouts/partials/navbar-clone.html
+++ b/themes/hugo-refresh/layouts/partials/navbar-clone.html
@@ -71,7 +71,8 @@
               {{- $shmenu = .Params.showinmenu -}}
             {{- end -}}
             {{- if $shmenu -}}
-              {{- $secCount := len .Sections -}}
+            {{- $secShowMenu := where .Sections ".Params.showinmenu" "eq" true -}}
+              {{- $secCount := len $secShowMenu -}}
               {{- if (ne $secCount 0) -}}
               <div class="navbar-item has-dropdown is-hoverable">
                 <a href="{{- .Permalink | relURL -}}" class="navbar-link">
