--- a/themes/hugo-refresh/layouts/docs/single.html
+++ b/themes/hugo-refresh/layouts/docs/single.html
@@ -3,5 +3,6 @@
     {{- partial "navbar.html" . -}}
     {{- partial "navbar-clone.html" . -}}
     {{- partial "docs/mainview.html" . -}}
+    {{- partial "footer.html" . -}}
 
 {{- end -}}
