Alignment of code structure and changed main wrapper name

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -117,10 +117,10 @@ h1, h2, h3, h4, h5, h6, p, strong
 .nav-section+.nav-section
   margin-top: 1rem
 
-.mainview
+.main-wrapper
   display: flex
 
-.mainview .navbar, nav .navbar
+.main-wrapper .navbar, nav .navbar
   display: flex
   align-items: center
 
@@ -162,10 +162,10 @@ h1, h2, h3, h4, h5, h6, p, strong
   .is-hidden-touch
     display: none !important
   
-  .mainview
+  .main-wrapper
     flex-direction: column
 
-  .mainview .navbar
+  .main-wrapper .navbar
     top: 4rem
 
   .main-panel
