--- a/themes/hugo-refresh/layouts/partials/docs/mainview.html
+++ b/themes/hugo-refresh/layouts/partials/docs/mainview.html
@@ -1,4 +1,4 @@
-<div class="mainview">
+<div class="main-wrapper">
     <div class="navbar is-light is-hidden-desktop">
         <div class="navbar-item">
             <a class="navbar-docs">Docs</a>
@@ -12,9 +12,4 @@
     <div class="main-panel">
         {{- partial "docs/content.html" . -}}
     </div>
-
-    <!-- Back To Top Button -->
-    <div id="backtotop"><a href="#"></a></div>
-
-    {{- partial "sidebar.html" . -}}
 </div>
