--- a/themes/hugo-refresh/layouts/docs/single.html
+++ b/themes/hugo-refresh/layouts/docs/single.html
@@ -3,6 +3,12 @@
     {{- partial "navbar.html" . -}}
     {{- partial "navbar-clone.html" . -}}
     {{- partial "docs/mainview.html" . -}}
+
     {{- partial "footer.html" . -}}
+
+    <!-- Back To Top Button -->
+    <div id="backtotop"><a href="#"></a></div>
+
+    {{- partial "sidebar.html" . -}}
 
 {{- end -}}
