Changed main-panel to lead-panel

--- a/themes/hugo-refresh/assets/style.sass
+++ b/themes/hugo-refresh/assets/style.sass
@@ -124,7 +124,7 @@ h1, h2, h3, h4, h5, h6, p, strong
   display: flex
   align-items: center
 
-.main-panel
+.lead-panel
   position: relative
 
 .sidebar-panel
@@ -168,7 +168,7 @@ h1, h2, h3, h4, h5, h6, p, strong
   .main-wrapper .navbar
     top: 4rem
 
-  .main-panel
+  .lead-panel
     padding-top: 6rem
     overflow-y: auto
 
