--- a/themes/hugo-refresh/layouts/partials/docs/mainview.html
+++ b/themes/hugo-refresh/layouts/partials/docs/mainview.html
@@ -9,7 +9,7 @@
         {{- partial "docs/sidenav.html" . -}}
     </div>
 
-    <div class="main-panel">
+    <div class="lead-panel">
         {{- partial "docs/content.html" . -}}
     </div>
 </div>
